# xrpl-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: account_balance.rs  account_submit_payment.rs
serde-xrpl/: Cargo.toml
serde-xrpl/src/: definitions.json  definitions.rs  error.rs  hash_prefixes.rs  lib.rs  ser.rs  types.rs  utils.rs
src/: duplex.rs  lib.rs  submit.rs  transports.rs  types.rs
src/codec/: definitions.json  mod.rs
src/transaction/types/: mod.rs
src/types/: account.rs  mod.rs  submit.rs
src/utils/testnet/: mod.rs
xrpl-rs/: Cargo.toml  LICENSE
xrpl-rs/examples/: account_balance.rs  account_submit_payment.rs  subscription.rs
xrpl-rs/src/: lib.rs  transports.rs
xrpl-rs/src/signing/: mod.rs
xrpl-rs/src/transaction/types/: mod.rs
xrpl-rs/src/types/: account.rs  channels.rs  fee.rs  ledger.rs  mod.rs  submit.rs  subscribe.rs  tx.rs
xrpl-rs/src/wallet/: mod.rs
