[package]
name = "serde-xrpl"
version = "0.1.1"
edition = "2021"
description = "Serde compatible XRPL serialization format"
license = "MIT"
repository = "https://github.com/Decentralised-Advertising/xrpl-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { version = "0.4.0", features = [ "check" ] }
hex = "0.4.3"
hex-literal = "0.3.4"
lazy_static = "1.4.0"
num-traits = "0.2.14"
rust_decimal = { version = "1.19.0", features = [ "maths" ] }
serde = { version = "1.0.133", features = [ "derive" ] }
serde_json = "1.0.74"
