[package]
name = "xrpl-rs"
version = "0.1.6"
edition = "2021"
description = "An XRPL client implementation"
license = "MIT"
repository = "https://github.com/Decentralised-Advertising/xrpl-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["json"] }
url = "2.2.2"
websocket = "0.26.2"
futures = "0.3.15"
async-trait = "0.1.50"
log = "0.4.14"
lazy_static = "1.4.0"
hex-literal = "0.3.4"
bs58 = { version = "0.4.0", features = ["check"] }
hex = "0.4.3"
rust_decimal = "1.19.0"
serde-xrpl = "0.1.2"
secp256k1 = { version = "0.21.0", features = [ "bitcoin_hashes", "rand" ] }
sha256 = "1.0.3"
sha2 = "0.10.0"
ed25519 = "1.3.0"
ed25519-dalek = "1.0.1"
ripemd = "0.1.0"
simple_logger = "2.1.0"
tokio-tungstenite = { version = "0.17.1", features = [ "native-tls" ] }
serde_with = "1.12.0"
rand = "0.8.5"
